Projet GL/test/src/test/deca/codegen/valid/created/incr1/float.deca
//Description:
//writing of floats 
{
    float x = 3.2;
    print(x);
}