Projet GL/test/src/test/deca/codegen/invalid/created/wrongfloat.deca
//Description 
//Wrong type cast of float 
{
    float x = true;
}